--- a/src/site/notes/起始页.md
+++ b/src/site/notes/起始页.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/起始页/","noteIcon":""}
+{"dg-publish":true,"permalink":"/起始页/","tags":["gardenEntry"],"noteIcon":""}
 ---
 
 
@@ -7,9 +7,9 @@
 
 **任务**：
 - [ ] 白银与美元负相关，寻找与美元正相关的资产，用于反向投资。
-- [ ] 考虑清理孤立文件
 - [ ] 查找徐晓峰法院判决
 - [ ] 基金类型及投资范围条理梳理。投资范围增加不得投资的禁止性规定
+- [ ] 考虑清理孤立文件
 
 { .block-language-dataview}
 **常用**：
