--- a/src/site/notes/起始页.md
+++ b/src/site/notes/起始页.md
@@ -7,12 +7,13 @@
 
 **任务**：
 - [ ] 白银与美元负相关，寻找与美元正相关的资产，用于反向投资。
-- [ ] 查找徐晓峰法院判决
-- [ ] 基金类型及投资范围条理梳理。投资范围增加不得投资的禁止性规定
 - [ ] 考虑清理孤立文件
+- [ ] 基金类型及投资范围条理梳理。投资范围增加不得投资的禁止性规定
+- [ ] frontmatter
 
 { .block-language-dataview}
 **常用**：
 - [[投资管理/行业库/行业库\|行业库]]
+- [[其他文件/Omnivore\|Omnivore]]
 
 **临时内容**：
